<resources>
    <string name="app_name" translatable="false">Alarmio</string>

    <string name="info_background_permissions_title">System Alerts / Background Permissions</string>
    <string name="info_background_permissions_body">Newer versions of Android are becoming increasingly unreliable at starting apps from the background without user interaction; with the introduction of Doze/App Standby in Android 6.0, the requirements for an app to be started are ambiguous and often device-specific.\n\nAs such, while it is not always a requirement for this app to function, it is highly recommended that you grant the System Overlays permission on the next page. This will grant Alarmio an exemption from Android\'s usual requirements for starting an app without user interaction, and allow it to function much more reliably.</string>

    <string name="title_alarm">Alarm %d</string>
    <string name="title_alarm_next">%s from now.</string>
    <string name="title_none">None</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="title_repeat">Repeat</string>
    <string name="title_set_alarm">Alarm</string>
    <string name="title_set_timer">Quick Clock</string>
    <string name="title_lap">Lap</string>
    <string name="title_lap_number" translatable="false">#%d</string>
    <string name="title_time">Time: %s</string>
    <string name="title_lap_time">Lap: %s</string>
    <string name="title_total_time">Total: %s</string>
    <string name="title_share_results">Share Results…</string>
    <string name="msg_delete_confirmation">Are you sure you want to delete %s?</string>
    <string name="title_delete">Delete</string>
    <string name="title_start_timer">Start Timer</string>
    <string name="title_auto">Auto</string>
    <string name="title_sunrise">Sunrise</string>
    <string name="title_sunset">Sunset</string>
    <string name="title_theme">Theme</string>
    <string name="title_appearance">Appearance</string>
    <string name="title_sound_none">None</string>
    <string name="title_snooze">Snooze</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_ringtones">Ringtones</string>
    <string name="word_day">day</string>
    <string name="word_days">days</string>
    <string name="word_minute">minute</string>
    <string name="word_minutes">minutes</string>
    <string name="word_hour">hour</string>
    <string name="word_hours">hours</string>
    <string name="word_join">and</string>
    <string name="title_snooze_custom">Custom…</string>
    <string name="msg_snoozed_until">Snoozed until %s</string>
    <string name="title_radio_test">Test</string>
    <string name="title_radio_create">Create</string>
    <string name="msg_radio_create">Create a new Radio</string>
    <string name="msg_radio_url">Paste an \'.m3u8\' Radio URL here…</string>
    <string name="msg_radio_previous">Choose a Previously Used Radio</string>
    <string name="title_radio_stop">Stop</string>
    <string name="title_radio">Radio</string>
    <string name="title_time_zones">Time Zones</string>
    <string name="title_behavior">Behavior</string>
    <string name="title_default_alarm_ringtone">Default Alarm Ringtone</string>
    <string name="title_default_timer_ringtone">Default Timer Ringtone</string>
    <string name="title_slow_wake_up">Slow Wake-up</string>
    <string name="desc_slow_wake_up">Gradually increase brightness and volume when an alarm is ringing.</string>
    <string name="title_slow_wake_up_time">Slow Wake-up Duration</string>
    <string name="title_about">About</string>
    <string name="title_choose_time_zone">Choose a Time Zone</string>
    <string name="title_alarm_name">Alarm Name</string>
    <string name="title_background_image">Background Image</string>
    <string name="title_ringing_background_image">Show Background Image On Alarms/Timers</string>
    <string name="desc_ringing_background_image">Whether to display the background image when an alarm or timer is ringing.</string>
    <string name="msg_alarms_empty">You don\'t have any alarms set. Press the \'+\' button to create one.</string>
    <string name="msg_time_zones_selected">%d Selected</string>
    <string name="title_files">Files</string>
    <string name="title_files_audio_files">Audio Files</string>
    <string name="title_files_add_audio">Choose File</string>
    <string-array name="array_themes">
        <item>Schedule</item>
        <item>Day</item>
        <item>Night</item>
        <item>AMOLED</item>
    </string-array>

    <string name="msg_battery_optimizations_switch_enable">Turn on the switch next to \"Alarmio\". You may need to scroll down… a lot.</string>
    <string name="title_ignore_battery_optimizations">Ignore Battery Optimizations</string>

    <string name="day_sunday_abbr">S</string>
    <string name="day_monday_abbr">M</string>
    <string name="day_tuesday_abbr">T</string>
    <string name="day_wednesday_abbr">W</string>
    <string name="day_thursday_abbr">T</string>
    <string name="day_friday_abbr">F</string>
    <string name="day_saturday_abbr">S</string>
    <string name="title_submit">ZJU Health Report Configuration</string>
    <string name="title_login">Login</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_forget_pwd">Forget password</string>
    <!--    待翻译-->
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <string name="welcome_login">欢迎登陆</string>
    <string name="sign_up">注册新用户</string>
    <string name="contact_server">联系客服</string>
    <string name="about_us">关于我们</string>
    <string name="old_version_login">旧版本登陆</string>
    <string name="new_version_login">新版本登陆</string>
    <string name="old_version_login_in_fragment">新版本fragment登陆</string>
    <string name="todo">TODO</string>
    <string name="quick_alarm">快速闹钟</string>
    <string name="alarm">闹钟</string>
    <string name="welcome_register">欢迎注册</string>
    <string name="user_register">注册</string>
    <string name="go_login">去登录</string>
    <string name="verify_pwd">确认密码</string>
    <string name="title_manually">ZJU Health Report Manually</string>
    <string name="hint_username">ZJU username</string>
    <string name="hint_password">ZJU password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="automatic_health_report">Automatic Health Report</string>
    <string name="health_report_config">Health Report Config</string>
    <string name="title_health">Auto Report</string>
    <string name="automatic_health_report_done">Automatic report successful</string>
    <string name="logout">Logout</string>
    <string name="logout_done">logout successful</string>
    <string name="automatic_health_report_repeat">You have already done health report~</string>
    <string name="text_about">Created By Kevin Zhang and Ziyue Pan.</string>
</resources>
