<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_register_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_fragment_notifications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.jfenn.alarmio.fragments.Account.FakeStatusBarView
        android:id="@id/statusbarutil_fake_status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="44dp"
        android:layout_height="88dp"
        android:padding="16dp"
        app:srcCompat="@drawable/ic_close"
        android:tintMode="src_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusbarutil_fake_status_bar_view" />

    <me.jfenn.alarmio.fragments.Account.DrawableTextView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/welcome_login"
        android:textColor="@color/color_ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableHeight="30dp"
        app:drawableWidth="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusbarutil_fake_status_bar_view"
        app:leftDrawable="@drawable/ic_google" />

    <LinearLayout
        android:id="@+id/slide_content"
        android:layout_width="399dp"
        android:layout_height="232dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_223F51B5"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:tintMode="src_in"
                app:srcCompat="@drawable/ic_account_24dp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_username"
                android:inputType="textVisiblePassword"
                android:maxLength="13"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_ffffff"
                android:textColorHint="@color/color_ffffff"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_clean_phone"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:tintMode="src_in"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_eeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:tintMode="src_in"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@color/color_ffffff"
                android:textColorHint="@color/color_ffffff"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/clean_password"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:tintMode="src_in"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_pass_gone"
                android:tintMode="src_in" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_eeeeee" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="21dp"

            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/color_ffffff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textColor="@color/color_ffffff"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>